# LowMemoryLLM

./: CMakeLists.txt  LICENSE  README.md  README_CN.md
include/: low_memory_llm.h
src/: CMakeLists.txt  download.c  download.h  extreme_compress.c  extreme_compress.h  extreme_kv_cache.c  extreme_kv_cache.h  inference.c  low_memory_llm.h  tensor.c
src/hal/: device_manager.c  device_manager.h  fp8.c  fp8.h  hal.c  hal.h  kv_cache.c  kv_cache.h  mixed_precision.c  mixed_precision.h  qat.c  qat.h  quantization.c  quantization.h  training.c  training.h
src/hal/arm/: cpu_impl.asm
src/hal/gpu/: gpu_context.c  gpu_context.h
src/hal/x86_64/: cpu_impl.asm  training_impl.asm
src/huggingface/: model_loader.c  model_loader.h  tokenizer.c  tokenizer.h
tests/: CMakeLists.txt  test_download.c  test_inference.c
tools/: generate_weights.c
